--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,9 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-size: 0.75rem;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .nav-bar {
@@ -29,22 +32,39 @@ body {
 
 .tab {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  border: solid 2px red;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  padding: 2rem;
+  text-align: center;
+
+  border: solid 1.5px rgb(129, 127, 170);
   background: white;
-  width: 50em;
+  width: 80vw;
   height: 10em;
   opacity: 0;
+  border-radius: 0.2rem;
 }
 
 .btn {
   position: absolute;
+  margin-top: 10px;
   bottom: 10px;
+  padding: 2px;
   background: white;
   opacity: 0;
+  left: 20px;
+  z-index: 2;
+  border: none;
+}
+
+@media screen and (min-width: 800px) {
+  .tab {
+    width: 30vw;
+  }
 }
 
 .Show {
-  opacity: 100;
+  opacity: 0.7;
 }
